# f1-race-intelligence

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
apps/api/: README.md  pyproject.toml
apps/api/src/f1_api/: main.py
apps/api/src/f1_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/f1_api/api/routes/: __init__.py  explanations.py  health.py  insights.py  meta.py  models.py  pipeline.py
apps/api/src/f1_api/api/schemas/: __init__.py  responses.py
apps/api/src/f1_api/services/: explanations.py  insights.py  models.py  pipeline.py
apps/dashboard/: README.md  pyproject.toml
apps/dashboard/src/f1_dashboard/: app.py  operator_loop.py
apps/dashboard/src/f1_dashboard.egg-info/: SOURCES.txt  requires.txt  top_level.txt
config/env/: vm.env.sample
docs/: ARCHITECTURE.md  deployment-plan.md  production-hardening.md  release-checklist.md  vm-deployment-readme.md
f1_race_intelligence_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap_dev.sh
tests/: conftest.py
tests/api/: test_health.py
tests/core/: test_config.py
tests/integration/: test_fastf1_real.py  test_features_parquet.py  test_health_http.py  test_ingestion_parquet.py  test_insights_parquet.py  test_last_run_manifest_flow.py  test_llm_explanations_parquet.py  test_models_baseline_parquet.py  test_processing_parquet.py
tests/unit/: test_api_app.py  test_api_explanations_service.py  test_api_insights_service.py  (+29 more)
(+3 files in other folders)
