[project]
name = "f1-api"
version = "0.1.0"
description = "FastAPI app for F1 Race Intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "f1-core>=0.1.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["f1_api*"]
